refactor: use toList instead of Collector